hphp/test/zend/good/ext-standard-strings/bug28386.php
<?php
$text = "Some text";
$string = "$text $text $text $text";
echo wordwrap($string, 9);
?>